@startuml

title __GREENHOUSE's Class Diagram__\n

  namespace model {
    abstract class model.Event {
    }
  }
  

  namespace model {
    class model.GreenhouseController {
    }
  }
  

  namespace model {
    class model.GreenhouseControls {
    }
  }
  

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  model.GreenhouseController o-- sample.Controller : controller
  model.GreenhouseControls -up-|> model.GreenhouseController
  model.GreenhouseControls o-- sample.Controller : controller
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
